--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@ a{
     <a href="detalle.html">Detalles</a>
   </div>
 </div>
-<audio id="musica" src="/musica/boda1.mp3"></audio>
+<audio id="musica" src="https://wwwbol.github.io/dos/musica/boda1.mp3"></audio>
 <!--presentacion-->
 <script>
 /**** animacion entrada y plaing music  ****/ 
